added new files

--- a/index.htm
+++ b/index.htm
@@ -100,9 +100,9 @@
               </button>
               <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav links">
-                    <li class="nav-item"><a class="nav-link" href="https://twogood.com.au/shop">SHOP</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://twogoodcatering.foodstorm.com/">CATERING</a></li>
-                    <li class="nav-item"><a class="nav-link" href="">DONATE</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">SHOP</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">CATERING</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">DONATE</a></li>
                 </ul>
               </div>
         </div>
@@ -121,7 +121,7 @@
                 TO COURSES</h1>
             <div class="video-container">
                 <div class="play">PLAY</div>
-                <video autoplay loop muted src="./vlog-p6.mp4"></video>
+                <video autoplay loop muted src="./production_id_3998275 (2160p).mp4"></video>
             </div>
             <!-- first page ends here -->
 
