--- a/index.htm
+++ b/index.htm
@@ -100,7 +100,7 @@
               </button>
               <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav links">
-                    <li class="nav-item"><a class="nav-link" href="#">SHOP</a></li>
+                    <li class="nav-item"><a class="nav-link" href="loginpage.html">SHOP</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">CATERING</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">DONATE</a></li>
                 </ul>
